# workload-aware-diloco

./: .gitignore  CITATION.cff  CLAIMS.md  MANIFEST.txt  README.md  REPRODUCING.md  pyproject.toml
configs/: b200_fixed_h_256.yaml  b200_fixed_h_256_token_match.yaml  b200_smoke.yaml  b200_wa_diloco.yaml
scripts/: aggregate_stage10_sidecars.py  aggregate_stage11_policy_sidecars.py  aggregate_stage12_bursty.py  aggregate_stage13_online.py  aggregate_stage14_fabric.py  aggregate_stage2_results.py  aggregate_stage4_results.py  aggregate_stage7_ablations.py  bootstrap_env.sh  calibrate_serving_simulator.py  collect_campaign_results.sh  collect_stage2_results.sh  compare_workspaces.py  diloco_fabric_probe.py  eval_checkpoint.py  generate_stage12_schedules.py  generate_stage13_online_configs.py  generate_stage7_configs.py  generate_stage9_large_model_configs.py  policy_significance.py  real_sidecar_validation.py  serving_slo_sidecar.py  simulate_pressure.py  submit_b200_campaign.sh  submit_b200_stage10_sidecars.sh  submit_b200_stage10b_sglang.sh  submit_b200_stage11_policy_sidecars.sh  submit_b200_stage12_bursty.sh  submit_b200_stage13_online.sh  submit_b200_stage2.sh  submit_b200_stage4_rescue.sh  submit_b200_stage5_extra_seeds.sh  submit_b200_stage7_ablation_campaign.sh  submit_b200_stage9_large_model.sh  submit_mi355x_stage14_fabric.sh  wait_for_free_gpus_and_submit.sh  wait_free_submit_vllm_and_stage7.sh  watch_stage7.sh
slurm/: b200-8x.sbatch  b200-real-sidecar-validation.sbatch  b200-sidecar-calibration.sbatch  b200-sidecar-validation.sbatch  b200-vllm-sidecar.sbatch  (+13 more)
(+230 files in other folders)
